2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warning.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c (get_err_fd): Remove prototype.
	* xfer-src/xfer-element.h (get_err_fd): Add prototype.
	* perl/Amanda/Cmdline.swg: #include "match.h"

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server): Print enssage to debug
	  file.
	* server-src/amfetchdump.pl: Add severity to messages.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.
	* installcheck/Amanda_Changer_robot.pl: Fix test.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Add a BROKEN-DRIVE-LOADED-SLOT
	  property.
	* man/xml-source/amanda-changers.7.xml: Document it.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amrmtape.pl: Fix diskpath.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Generate an error if fopen of config fail.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtrmidx.c: Do not delete index file newer than 7 days.
	* installcheck/amrmtape.pl: Fix check.

2014-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (do) : Set action with special command.

2014-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/logfile.c: Do no create the log symlink for a
	  checkdump or fetchdump run.

2014-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Parse checkdump and fetchdump line. new
	  return an Amanda::Message on error.
	* perl/Amanda/Rest/Report.pm: Handle Amanda::Report->new returning an
	  Amanda::Message.
	* server-src/amreport.pl: Handle Amanda::Report->new returning an
	  Amanda::Message.